// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider component Divider should change color 1`] = `
<div>
  <div
    class="css-rafpqp-Divider"
  />
</div>
`;

exports[`Divider component gradient divider should match snapshot 1`] = `
<div>
  <div
    class="css-1h3r1of-Divider"
  />
</div>
`;

exports[`Divider component solid divider should match snapshot 1`] = `
<div>
  <div
    class="css-1g2mpip-Divider"
  />
</div>
`;
